--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Logcat Reader</string>
+    <string name="app_name">Logcat</string>
     <string name="device_logs">Device Logs</string>
     <string name="saved_logs">Saved Logs</string>
     <string name="saved_logs_action">Saved logs</string>
